@@ -1,10 +1,10 @@
 <?php
 /**
  * @inheritdoc
- * Leave it for compatibility of old config.php file
  */
 class DbHttpSession extends \CDbHttpSession
 {
+
     /**
      * @inheritdoc
      * Usage of config
